# simple_disk_cache

./: Cargo.toml  README.md
src/: config.rs  encoding.rs  lib.rs
tests/: cache.rs
